# i2cTest

./: Makefile  testProj.ioc
source/: ARMcompiler.cmake  CMakeLists.txt  STM32H743ZITx_FLASH.ld
source/inc/: adxl355.h  comms.h  ethernetif.h  i2c.h  lis3mdl.h  lps22hb.h  main.h  stm32h7xx_it.h  tcp_io.h  uart_io.h
source/src/: adxl355.c  adxl355_test.c  comms.c  ethernetif.c  i2c.c  lis3mdl.c  lis3mdl_test.c  lps22hb.c  lps22hb_test.c  lwip.c  main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  tcp_io.c  uart_io.c
